// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageTabs > matches snapshot (default) 1`] = `
<div>
  <div
    class="flex flex-wrap gap-1"
  >
    <button
      class="inline-flex items-center gap-1.5 rounded-md px-3 py-1.5 text-sm font-medium transition-colors text-muted-foreground hover:bg-accent/50 hover:text-foreground"
      type="button"
    >
      Overview
    </button>
    <button
      class="inline-flex items-center gap-1.5 rounded-md px-3 py-1.5 text-sm font-medium transition-colors bg-accent text-accent-foreground"
      type="button"
    >
      Settings
      <span
        class="ml-1 rounded-full px-1.5 py-0.5 text-xs font-medium bg-primary/10 text-primary"
      >
        3
      </span>
    </button>
    <button
      class="inline-flex items-center gap-1.5 rounded-md px-3 py-1.5 text-sm font-medium transition-colors text-muted-foreground hover:bg-accent/50 hover:text-foreground"
      type="button"
    >
      Logs
    </button>
  </div>
</div>
`;

exports[`PageTabs > matches snapshot (pills) 1`] = `
<div>
  <div
    class="flex flex-wrap gap-1 rounded-lg bg-muted p-1"
  >
    <button
      class="inline-flex items-center gap-1.5 rounded-md px-3 py-1.5 text-sm font-medium transition-colors bg-background text-foreground shadow-sm"
      type="button"
    >
      Overview
    </button>
    <button
      class="inline-flex items-center gap-1.5 rounded-md px-3 py-1.5 text-sm font-medium transition-colors text-muted-foreground hover:text-foreground"
      type="button"
    >
      Settings
      <span
        class="ml-1 rounded-full px-1.5 py-0.5 text-xs font-medium bg-muted-foreground/10 text-muted-foreground"
      >
        3
      </span>
    </button>
    <button
      class="inline-flex items-center gap-1.5 rounded-md px-3 py-1.5 text-sm font-medium transition-colors text-muted-foreground hover:text-foreground"
      type="button"
    >
      Logs
    </button>
  </div>
</div>
`;

exports[`PageTabs > matches snapshot (underline) 1`] = `
<div>
  <div
    class="flex gap-4 border-b border-border"
  >
    <button
      class="inline-flex items-center gap-1.5 border-b-2 px-1 pb-3 text-sm font-medium transition-colors border-transparent text-muted-foreground hover:border-border hover:text-foreground"
      type="button"
    >
      Overview
    </button>
    <button
      class="inline-flex items-center gap-1.5 border-b-2 px-1 pb-3 text-sm font-medium transition-colors border-transparent text-muted-foreground hover:border-border hover:text-foreground"
      type="button"
    >
      Settings
      <span
        class="ml-1 rounded-full px-1.5 py-0.5 text-xs font-medium bg-muted-foreground/10 text-muted-foreground"
      >
        3
      </span>
    </button>
    <button
      class="inline-flex items-center gap-1.5 border-b-2 px-1 pb-3 text-sm font-medium transition-colors border-primary text-primary"
      type="button"
    >
      Logs
    </button>
  </div>
</div>
`;
